--- a/frontend/src/component/Header.css
+++ b/frontend/src/component/Header.css
@@ -1,23 +1,59 @@
 header{
+    position: absolute;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 150px;
+    padding: 30px 150px;
 }
-header button{
+header .auth{
     border-radius: 5px;
-    padding: 5px 10px;
+    padding: 3px 10px;
     font-weight: 600;
     cursor: pointer;
+    font-size: 15px;
+}
+header #search{
+    background-color: transparent;
+    border-radius: 25px;
+    border: 2px solid var(--text-secondary);
+    padding: 7px 15px;
+    /* text-indent: 10px; */
+    width: 540px;
+}
+.right-head{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+}
+#trade{
+    background-color: var(--secondary);
+    color: var(--white);
+    padding: 10px 10px;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 500;
+    max-width: 118px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+}
+#chat{
+    border: none;
+    background-color: transparent;
+    width: 30px;
+    height: 30px;
 }
 .signup{
     color: var(--white);
     background-color: var(--secondary);
     border: 1px solid var(--secondary);
-    margin-right: 25px;
+    /* margin-right: 20px; */
 }
 .login{
     color: var(--secondary);
     background-color: var(--white);
-    border: 1px solid var(--secondary)
+    border: 1px solid var(--secondary);
 }
