--- a/frontend/src/page/OtherProfile.css
+++ b/frontend/src/page/OtherProfile.css
@@ -1,5 +1,5 @@
 .other-profile{
-    padding: 150px;
+    padding: 120px;
 }
 .other-detail{
     display: flex;
@@ -62,7 +62,7 @@
 /* reviews tab */
 .reviews{
     display: grid;
-    grid-template-columns: repeat(2, 780px);
+    grid-template-columns: repeat(2, 600px); /*old 780px*/
     justify-content: space-between;
     gap: 30px 0;
 }
