--- a/frontend/src/page/Profile.css
+++ b/frontend/src/page/Profile.css
@@ -58,7 +58,7 @@
 .photo p{
     cursor: pointer;
 }
-.form-input{
+.profile-form-input{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
