--- a/frontend/src/component/FormComponent.css
+++ b/frontend/src/component/FormComponent.css
@@ -1,7 +1,7 @@
 .form-input{
     margin-top: 30px;
 }
-.form-input input{
+.form-input input, .profile-form-input input{
     background-color: var(--darken-background);
     border: none;
     border-radius: 12px;
