--- a/frontend/src/component/Report.css
+++ b/frontend/src/component/Report.css
@@ -2,7 +2,17 @@
     border: 1px solid rgba(163, 68, 7, 0.45);
     padding: 20px;
     width: 400px;
+    height: 455px;
     border-radius: 20px;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    z-index: 1;
+    margin: auto;
+    display: none;
 }
 .report h1{
     color: var(--text-primary);
@@ -21,6 +31,7 @@
 }
 .report ul{
     list-style: none;
+    margin: 15px 0;
 }
 .report ul input{
     appearance: none;
@@ -38,13 +49,6 @@
     border: 1px solid var(--secondary);
     
 }
-.report{
-    display: flex;
-    flex-direction: column;
-}
-.report ul{
-    margin: 15px 0;
-}
 .report li{
     display: flex;
     align-items: center;
@@ -52,6 +56,7 @@
     margin-bottom: 20px;
 }
 .report-submit{
+    display: block;
     border: none;
     border-radius: 20px;
     background-color: var(--secondary);
