--- a/frontend/src/component/TradePopup.css
+++ b/frontend/src/component/TradePopup.css
@@ -17,9 +17,19 @@
     height: 784px;
     margin: auto;
     background-color: white;
-    padding: 30px;
+    padding: 20px 30px;
     border-radius: 10px;
     display: none;
+}
+.trade-popup .popup-head{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.popup-head img{
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
 }
 .trade-popup h1{
     color: var(--text-primary);
@@ -48,7 +58,7 @@
 }
 .user-inventory{
     background-color: var(--darken-background);
-    height: 620px;
+    height: 630px;
     border-radius: 0 0 15px 15px;
     padding: 20px;
 }
@@ -92,13 +102,39 @@
     padding: 20px;
     box-sizing:content-box;
 }
-.do-offer{
+.do-offer, .respond-btn{
     border-radius: 20px;
     border: none;
     color: white;
     background-color: var(--secondary);
-    padding: 5px 20px;
+    padding: 10px 20px;
     font-weight: 500;
     font-size: 14px;
-    margin: 0 auto;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+.do-offer{
+    padding: 10px 30px;
+    margin: 0 auto 5px;
+}
+
+.bg-overlay{
+    position:absolute; 
+    background-color: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    display: grid;
+    place-items: center;
+    color: white;
+}
+.bg-overlay h2{
+    font-size: 18px;
+    font-weight: 600;
+}
+.other-option{
+    font-weight: 400;
+    text-align: center;
+    cursor: pointer;
 }
