upload item, img

--- a/frontend/src/component/ProductCard.css
+++ b/frontend/src/component/ProductCard.css
@@ -2,6 +2,7 @@
     width: 240px;
     height: 240px;
     border-radius: 10px;
+    border: 1px solid black;
     object-fit:cover;
 }
 #product-card-name{
