--- a/frontend/src/component/HorizontalCard.css
+++ b/frontend/src/component/HorizontalCard.css
@@ -2,15 +2,19 @@
     margin: 5px 0;
     display: flex;
     gap: 10px;
+    /* height: 90px;
+    width: 250px; */
 }
 .horizontal-card .item-img{
     width: 120px;
     height: 120px;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 10px;
+    border: 1px solid var(--secondary);
+    flex-shrink: 0;
 }
 .horizontal-card-detail{
-    width: 200px;
+    width: auto;
 }
 .horizontal-card h3{
     font-size: 20px;
