--- a/frontend/src/component/TradePopup.css
+++ b/frontend/src/component/TradePopup.css
@@ -1,4 +1,4 @@
-.popup-bg{
+.popup-bg {
     background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
@@ -6,8 +6,10 @@
     width: 100vw;
     height: 100vh;
     display: none;
+    z-index: 1;
 }
-.trade-popup{
+
+.trade-popup {
     position: fixed;
     top: 0;
     left: 0;
@@ -20,28 +22,34 @@
     padding: 20px 30px;
     border-radius: 10px;
     display: none;
+    z-index: 1;
 }
-.trade-popup .popup-head{
+
+.trade-popup .popup-head {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.popup-head img{
+
+.popup-head img {
     width: 25px;
     height: 25px;
     cursor: pointer;
 }
-.trade-popup h1{
+
+.trade-popup h1 {
     color: var(--text-primary);
     font-size: 32px;
     margin-bottom: 5px;
 }
-.user-inventory-nav{
+
+.user-inventory-nav {
     display: flex;
     justify-content: space-around;
     gap: 10px;
 }
-.user-inventory-nav h3{
+
+.user-inventory-nav h3 {
     background-color: var(--darken-background);
     width: 100%;
     text-align: center;
@@ -50,20 +58,23 @@
     font-size: 20px;
     cursor: pointer;
 }
-.trade-popup-content{
+
+.trade-popup-content {
     display: grid;
     grid-template-columns: 550px 1fr;
     justify-content: space-between;
     gap: 50px;
 }
-.user-inventory{
+
+.user-inventory {
     background-color: var(--darken-background);
     height: 630px;
     border-radius: 0 0 15px 15px;
     padding: 20px;
 }
-.user-inventory input{
-    border-radius: 20px;
+
+.user-inventory input {
+    border-radius: 20px 0 0 20px;
     border: 1px solid black;
     background-color: transparent;
     width: 100%;
@@ -71,26 +82,70 @@
     padding: 5px 10px;
     margin-bottom: 10px;
 }
-.item-display{
+
+.item-selection .search-btn {
+    border-radius: 0 20px 20px 0;
+    padding: 5px 15px;
+    border: 1px solid var(--text-secondary);
+    border-left: none;
+    cursor: pointer;
+    font-size: 12px;
+    width: auto;
+}
+
+.item-display {
     display: grid;
     grid-template-columns: repeat(3, 150px);
     justify-content: space-between;
     gap: 20px 0;
 }
-/* right side */
-.their-stuff, .your-stuff{
-    margin: 5px 0 20px;
-    display: grid;
-    grid-template-columns: repeat(2, 230px);
-    gap: 10px 30px;
-    /* justify-content: space-between; */
+
+.selected-overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 10px;
 }
-.item-trading{
+
+.popup-navigate {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    gap: 20px;
+    color: var(--text-primary);
+    padding-bottom: 10px;
+}
+
+.popup-navigate p {
+    text-box: trim-both text alphabetic;
+}
+
+
+/* right side */
+.their-stuff,
+.your-stuff {
+    margin: 5px 0 10px;
+    display: grid;
+    grid-template-rows: repeat(2, 90px);
+    grid-auto-flow: column;
+    grid-auto-columns: 250px;
+    gap: 10px 30px;
+    height: 220px;
+    width: 620px;
+    overflow-x: auto;
+}
+
+.item-trading {
     height: 674px;
     display: flex;
     flex-direction: column;
 }
-.middle-section img{
+
+.middle-section img {
     width: 37px;
     position: absolute;
     top: 0;
@@ -100,9 +155,11 @@
     margin: auto;
     background-color: white;
     padding: 20px;
-    box-sizing:content-box;
+    box-sizing: content-box;
 }
-.do-offer, .respond-btn{
+
+.do-offer,
+.respond-btn {
     border-radius: 20px;
     border: none;
     color: white;
@@ -113,14 +170,15 @@
     margin-bottom: 5px;
     cursor: pointer;
 }
-.do-offer{
+
+.do-offer {
     padding: 10px 30px;
     margin: 0 auto 5px;
 }
 
-.bg-overlay{
-    position:absolute; 
-    background-color: rgba(0,0,0,0.5);
+.bg-overlay {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
     left: 0;
@@ -129,12 +187,24 @@
     place-items: center;
     color: white;
 }
-.bg-overlay h2{
+
+.bg-overlay h2 {
     font-size: 18px;
     font-weight: 600;
 }
-.other-option{
+
+.other-option {
     font-weight: 400;
     text-align: center;
     cursor: pointer;
+}
+.no-item{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    margin: 0 auto;
+    display: grid;
+    place-items: center;
 }
