--- a/frontend/src/page/Profile.css
+++ b/frontend/src/page/Profile.css
@@ -15,18 +15,22 @@
     height: 550px;
     display: flex;
     flex-direction: column;
+    user-select: none;
 }
 
-.profile-display span img{
+.profile-display span img {
     width: 19px;
     height: 19px;
 }
+
 /* filter to change icon color, in this case to white */
-.nav:nth-child(-n + 3) img, .nav:nth-child(5) img{
-    filter: invert(98%) sepia(100%) saturate(0%) hue-rotate(8deg) brightness(104%) contrast(102%);;
+.nav:nth-child(-n + 3) img,
+.nav:nth-child(5) img {
+    filter: invert(98%) sepia(100%) saturate(0%) hue-rotate(8deg) brightness(104%) contrast(102%);
+    ;
 }
 
-.nav{
+.nav {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -34,38 +38,64 @@
     padding: 10px;
     cursor: pointer;
 }
-.nav p{
+
+.nav p {
     color: var(--white);
     font-weight: 300;
 }
+
+.profile-page-right {
+    height: 750px;
+    position: relative;
+}
+
 /* inventory tab */
-.inventory{
+.inventory {
     display: grid;
     grid-template-columns: repeat(4, 240px);
     justify-content: space-between;
     gap: 50px 0;
 }
+
+.profile-total {
+    /*pagination navigator*/
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    gap: 20px;
+    padding-bottom: 30px;
+    user-select: none;
+}
+
 /* personal tab */
-.personal{
+.personal {
     display: flex;
     flex-direction: column;
 }
-.photo{
+
+.photo {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-.photo label{
+
+.photo label {
     cursor: pointer;
+    user-select: none;
 }
-.profile-form-input{
+
+.profile-form-input {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-auto-flow: column;
     gap: 0 100px;
 }
-.update{
+
+.update {
     border: none;
     background-color: var(--secondary);
     color: var(--white);
@@ -75,16 +105,19 @@
     margin: 50px auto 0;
     cursor: pointer;
 }
+
 /* setting tab */
-.setting-sect{
+.setting-sect {
     display: flex;
     flex-direction: column;
     margin-bottom: 40px;
     gap: 10px 0;
 }
-.setting-sect h1{
+
+.setting-sect h1 {
     font-size: 32px;
 }
-.setting-sect p{
+
+.setting-sect p {
     font-size: 24px;
 }
