--- a/frontend/src/component/Report.css
+++ b/frontend/src/component/Report.css
@@ -1,68 +1,91 @@
-.report{
+.report {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    display: grid;
+    place-items: center;
+    z-index: 1;
+    user-select: none;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 100ms, pointer-events 100ms;
+}
+
+.report-content {
     border: 1px solid rgba(163, 68, 7, 0.45);
     padding: 20px;
     width: 400px;
     height: 455px;
     border-radius: 20px;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     background-color: white;
-    z-index: 1;
-    margin: auto;
-    display: none;
 }
-.report h1{
+
+.report-active {
+    opacity: 1;
+    pointer-events: all;
+}
+
+.report h1 {
     color: var(--text-primary);
     justify-self: center;
     font-size: 24px;
     font-weight: 600;
 }
-.report img{
+
+.report img {
     width: 20px;
     height: 20px;
 }
-.report span{
+
+.report span {
     display: grid;
     grid-template-columns: 1fr 20px;
     align-items: center;
 }
-.report ul{
+
+.report ul {
     list-style: none;
     margin: 15px 0;
 }
-.report ul input{
+
+.report ul input {
     appearance: none;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.25);
     width: 16px;
     height: 16px;
 }
-.report ul input:checked{
+
+.report ul input:checked {
     border: 1px solid rgba(0, 0, 0, 0.25);
     padding: 5px;
-    background: radial-gradient(circle,rgba(242, 152, 68, 1) 50%, rgba(255, 255, 255, 1) 50%);
+    background: radial-gradient(circle, rgba(242, 152, 68, 1) 50%, rgba(255, 255, 255, 1) 50%);
 }
-.report ul input:hover, .report ul label:hover + .report ul input{
+
+.report ul input:hover,
+.report ul label:hover+.report ul input {
     border: 1px solid var(--secondary);
-    
+
 }
-.report li{
+
+.report li {
     display: flex;
     align-items: center;
     gap: 10px;
     margin-bottom: 20px;
 }
-.report-submit{
+
+.report-submit {
     display: block;
     border: none;
     border-radius: 20px;
     background-color: var(--secondary);
     color: var(--white);
-    padding:8px 10px;
+    padding: 8px 10px;
     width: 150px;
-    margin:0 auto;
+    margin: 0 auto;
     align-self: center;
 }
