--- a/frontend/src/component/Chat.css
+++ b/frontend/src/component/Chat.css
@@ -1,11 +1,11 @@
 .chat {
     border: 1px solid black;
     border-radius: 20px;
-    padding: 20px 30px;
-    width: 450px;
-    height: 450px;
+    padding: 20px 25px;
+    width: 430px;
+    height: 500px;
     position: absolute;
-    top: 95px;
+    top: 90px;
     right: 220px;
     background-color: white;
     opacity: 0;
@@ -14,7 +14,7 @@
     z-index: 1;
 }
 .chat-active{
-    top: 120px;
+    top: 110px;
     right: 220px;
     opacity: 1;
     pointer-events: auto;
@@ -31,7 +31,7 @@
 }
 
 .chat-list {
-    height: 310px;
+    height: 325px;
     overflow-y: scroll;
 }
 
@@ -40,7 +40,7 @@
     border: 1px solid black;
     width: 100%;
     padding: 5px 15px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 .chat-tile {
@@ -71,7 +71,7 @@
 
 }
 
-.chat-input img {
+#msg-image, .chat-send {
     width: 25px;
 }
 
@@ -81,4 +81,9 @@
     padding: 5px 10px;
     font-size: 12px;
     width: 100%;
+}
+.chat-img-preview{
+    position: absolute;
+    top: 0;
+    width: 100px;
 }
