--- a/frontend/src/component/Header.css
+++ b/frontend/src/component/Header.css
@@ -76,3 +76,37 @@ header #search-btn {
     background-color: var(--white);
     border: 1px solid var(--secondary);
 }
+
+.view-img{
+    width: 100vw;
+    height: 100vh;
+    position: fixed ;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: grid;
+    place-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 200ms, pointer-events 200ms;
+    z-index: 1;
+}
+.view-img-active{
+    opacity: 1;
+    pointer-events: auto;
+}
+.view-close{
+    position: absolute;
+    border-radius: 50%;
+    padding: 20px;
+    display: flex;
+    top: 20px;
+    right: 40px;
+}
+.view-close img{
+    width: 30px;
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(2%) hue-rotate(76deg) brightness(104%) contrast(101%);
+    cursor: pointer;
+}
+.view-img.content{
+}
