--- a/frontend/src/component/Chat.css
+++ b/frontend/src/component/Chat.css
@@ -33,7 +33,7 @@
 
 .chat-list {
     height: 325px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #chat-search {
@@ -150,7 +150,7 @@
     flex-direction: column;
     overflow-y: auto;
     padding: 10px 0;
-    height: 350px;
+    height: 340px;
     scroll-behavior: smooth;
     overscroll-behavior: contain;
 }
