--- a/frontend/src/component/Header.css
+++ b/frontend/src/component/Header.css
@@ -63,7 +63,20 @@ header #search-btn {
     width: 30px;
     height: 30px;
 }
-
+.badge{
+    position: absolute;
+    bottom: 18px;
+    left: 18px;
+    background-color: var(--secondary);
+    color: white;
+    border-radius: 50%;
+    padding: 2px;
+    display: flex;
+    width: 15px;
+    height: 15px;
+    justify-content: center;
+    align-items: center;
+}
 .signup {
     color: var(--white);
     background-color: var(--secondary);
