--- a/frontend/src/component/Footer.css
+++ b/frontend/src/component/Footer.css
@@ -25,6 +25,9 @@ footer{
     margin: 0;
     width: 38px;
 }
+.top li{
+    font-size: 14px;
+}
 .top a{
     font-weight: 300;
     line-height: 40px;
@@ -51,6 +54,7 @@ a{
     pointer-events: none;
     transition: top 500ms, opacity 500ms, pointer-events 500ms;
     background-color: var(--darken-background);
+    z-index: 1;
 }
 .lang-dropdown li{
     padding: 10px;
@@ -77,7 +81,6 @@ a{
     width: 100vw;
     height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: 1;
