--- a/frontend/src/page/Upload.css
+++ b/frontend/src/page/Upload.css
@@ -12,7 +12,7 @@
 .item-inputs{
     margin-top: 10px;
     display: grid;
-    grid-template-columns: 1fr 450px; /*could change back to 1fr 450px*/
+    grid-template-columns: 1fr 450px;
 }
 .choose-file{
     user-select: none;
@@ -70,7 +70,7 @@ input[type='file']{
     resize: none;
 }
 .item-infos textarea{
-    height: 105px;
+    height: 100%;
     padding-top: 30px;
     text-align: start;
 }
