--- a/frontend/src/component/TradeCard.css
+++ b/frontend/src/component/TradeCard.css
@@ -40,7 +40,8 @@
     background-color: rgba(0,0,0,0.3);
     bottom: 0;
     width: 1080px;
-    height: 100%; 
+    height: 260px; 
+    top: 0;
     border-radius: 10px;
 }
 .overlay p{
